fix: header z-index

--- a/src/blocks/modules/header/header.scss
+++ b/src/blocks/modules/header/header.scss
@@ -135,6 +135,7 @@
   background-color: inherit;
 
   @include media-M {
+    z-index: 99999;
     margin-left: 0;
   }
 
