--- a/src/blocks/modules/main-nav/main-nav.scss
+++ b/src/blocks/modules/main-nav/main-nav.scss
@@ -58,6 +58,8 @@
   }
 
   @include media-M {
+    z-index: 99999;
+    
     display: none;
     box-sizing: border-box;
     position: fixed;
@@ -71,6 +73,7 @@
   }
 
   @include media-XS {
+
     box-sizing: border-box;
     position: fixed;
     overflow: scroll;
